feat(neighborhoods): allow uni pick() and split change moves to assign/unassign/change